<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background3Fragments"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/BusqueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/MargenesEstandarX"
        android:layout_marginVertical="@dimen/MargenesEstadarY"
        android:autoSizeTextType="uniform"
        android:text="@string/Busqueda"
        android:textColor="@color/white"
        android:textSize="@dimen/TextosMedianos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GenerosView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/MargenesEstadarY"
        android:text="@string/Generos"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/BusqueView"
        app:layout_constraintTop_toBottomOf="@+id/BusqueView" />

    <ImageButton
        android:id="@+id/Genero1"
        android:layout_width="@dimen/GenerosX"
        android:layout_height="@dimen/GenerosY"
        android:layout_marginVertical="@dimen/MargenesEstadarY"
        android:background="@color/sinColor"
        android:contentDescription="@string/genero1"
        android:scaleType="fitXY"
        android:src="@drawable/genero1"
        app:layout_constraintEnd_toStartOf="@+id/Genero2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenerosView" />

    <ImageButton
        android:id="@+id/Genero2"
        android:layout_width="@dimen/GenerosX"
        android:layout_height="@dimen/GenerosY"
        android:layout_marginVertical="@dimen/MargenesEstadarY"
        android:layout_marginEnd="4dp"
        android:background="@color/sinColor"
        android:contentDescription="@string/genero2"
        android:scaleType="fitXY"
        android:src="@drawable/genero2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenerosView" />

    <ImageButton
        android:id="@+id/Genero3"
        android:layout_width="@dimen/GenerosX"
        android:layout_height="@dimen/GenerosY"
        android:layout_marginVertical="@dimen/MargenesEstadarY"
        android:background="@color/sinColor"
        android:contentDescription="@string/genero3"
        android:scaleType="fitXY"
        android:src="@drawable/genero3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Genero1" />

    <ImageButton
        android:id="@+id/Genero4"
        android:layout_width="@dimen/GenerosX"
        android:layout_height="@dimen/GenerosY"
        android:layout_marginVertical="@dimen/MargenesEstadarY"
        android:background="@color/sinColor"
        android:contentDescription="@string/genero4"
        android:scaleType="fitXY"
        android:src="@drawable/genero4"
        app:layout_constraintEnd_toEndOf="@+id/Genero2"
        app:layout_constraintTop_toBottomOf="@+id/Genero2" />

</androidx.constraintlayout.widget.ConstraintLayout>
